Enhance chatbot with Gemini integration, Plotly charts and role-based security